@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.617 2010/06/05 09:10:09 pdp Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.618 2010/06/05 10:04:43 pdp Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -15,6 +15,10 @@ PP/02 Include check_rfc2047_length in configure.default because we're seeing
 JJ/01 Added DISABLE_DKIM and comment to src/EDITME
 
 PP/03 Bugzilla 994: added openssl_options main configuration option.
+
+PP/04 Bugzilla 995: provide better SSL diagnostics on failed reads.
+
+PP/05 Bugzilla 834: provide a permit_codedump option for pipe transports.
 
 Exim version 4.72
 -----------------
